fixed navbar and spacing on show page

--- a/app/assets/stylesheets/components/_show-card.scss
+++ b/app/assets/stylesheets/components/_show-card.scss
@@ -1,5 +1,5 @@
 .whole-show-background {
-  height: 100vh;
+  height: calc(100vh - 78px);
   width: 100%;
   display: flex;
   flex-direction: column;
